    (Tjerk)

- FPM:
  . Fixed bug #67530 (error_log=syslog ignored). (Remi)

- Intl:
  . Fixed bug #66921 (Wrong argument type hint for function
    intltz_from_date_time_zone). (Stas)
  . Fixed bug #67052 (NumberFormatter::parse() resets LC_NUMERIC setting).
    (Stas)

- pgsql:
  . Fixed bug #67555 (Cannot build against libpq 7.3). (Adam)

- Phar:
  . Fixed bug #67587 (Redirection loop on nginx with FPM). (Christian Weiske)

- SPL:
  . Fixed bug #67539 (ArrayIterator use-after-free due to object change during 
    sorting). (research at insighti dot org, Laruence)
  . Fixed bug #67538 (SPL Iterators use-after-free). (CVE-2014-4670) (Laruence)

- OPCache:
  . Fixed bug #67215 (php-cgi work with opcache, may be segmentation fault
    happen) (Dmitry, Laruence)

- phpdbg
  . Fixed bug #67575 (Compilation fails for phpdbg when the
    build directory != src directory). (Andy Thompson)

03 Jul 2014, PHP 5.6.0 Release Candidate 2

- Core:
  . Fixed bug #67091 (make install fails to install libphp5.so on FreeBSD 10.0).
    (Ferenc)
  . Fixed bug #67368 (Memory leak with immediately dereferenced array in class
    constant). (Laruence)
  . Fixed bug #67468 (Segfault in highlight_file()/highlight_string()).
    (Andreas Ferber)
  . Fixed bug #67498 (phpinfo() Type Confusion Information Leak Vulnerability).
    (Stefan Esser)
  . Fixed bug #67551 (php://input temp file will be located in sys_temp_dir
    instead of upload_tmp_dir). (Mike)

- FPM:
  . Fix bug #67531 (syslog cannot be set in pool configuration). (Remi)
  . Fix bug #67541 (Fix Apache 2.4.10+ SetHandler proxy:fcgi://
    incompatibilities). (David Zuelke)

- Intl:
  . Fixed bug #67349 (Locale::parseLocale Double Free). (Stas)
  . Fixed bug #67397 (Buffer overflow in locale_get_display_name and
    uloc_getDisplayName (libicu 4.8.1)). (Stas)

- pgsql:
  . Fix bug #67550 (Error in code "form" instead of "from", pgsql.c, line 756),
    which affected builds against libpq < 7.3. (Adam)

- phpdbg: